--- a/Views/Race/Create.cshtml
+++ b/Views/Race/Create.cshtml
@@ -1,5 +1,6 @@
-﻿@using RunGroopWebApp.Data.Enum;
-@model Race
+﻿@using RunGroopWebApp.Data.Enum
+@using RunGroopWebApp.ViewModels
+@model CreateRaceViewModel
 
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
@@ -14,9 +15,8 @@
     <section class="space-sm">
         <div class="container">
             <div class="row mb-5">
-                <!--end of col-->
             </div>
-            <!--end of row-->
+
             <div class="row flex-md-row card card-md">
                 <div class="card-body bg-secondary">
                     <div class="text-center mb-5">
@@ -82,7 +82,5 @@
                 </div>
             </div>
         </div>
-        <!--end of container-->
     </section>
-    <!--end of section-->
 </div>
