--- a/Views/Club/Create.cshtml
+++ b/Views/Club/Create.cshtml
@@ -1,5 +1,7 @@
-﻿@using RunGroopWebApp.Data.Enum;
-@model Club
+﻿@using RunGroopWebApp.Data.Enum
+@using RunGroopWebApp.ViewModels
+@model CreateClubViewModel
+
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
