--- a/Views/Club/Index.cshtml
+++ b/Views/Club/Index.cshtml
@@ -20,7 +20,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <a class="btn btn-sm btn-outline-secondary" asp-controller="Club" asp-action="Detail" asp-route-id="@item.Id" >View</a>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                    <a class="btn btn-sm btn-outline-secondary" asp-controller="Club" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
                                 </div>
                                 <small class="text-muted">@item.ClubCategory</small>
                             </div>
